@@ -18,16 +18,18 @@ package ch.cyberduck.core.openstack;
  * feedback@cyberduck.io
  */
 
+import ch.cyberduck.core.CancellingListProgressListener;
 import ch.cyberduck.core.DefaultIOExceptionMappingService;
 import ch.cyberduck.core.DefaultPathContainerService;
 import ch.cyberduck.core.ListProgressListener;
 import ch.cyberduck.core.Path;
 import ch.cyberduck.core.PathAttributes;
 import ch.cyberduck.core.PathContainerService;
-import ch.cyberduck.core.date.ISO8601DateParser;
+import ch.cyberduck.core.date.ISO8601DateFormatter;
 import ch.cyberduck.core.date.InvalidDateException;
 import ch.cyberduck.core.date.RFC1123DateFormatter;
 import ch.cyberduck.core.exception.BackgroundException;
+import ch.cyberduck.core.exception.ListCanceledException;
 import ch.cyberduck.core.exception.NotfoundException;
 import ch.cyberduck.core.features.AttributesAdapter;
 import ch.cyberduck.core.features.AttributesFinder;
@@ -42,7 +44,6 @@ import org.apache.logging.log4j.Logger;
 
 import java.io.IOException;
 
-import ch.iterate.openstack.swift.Constants;
 import ch.iterate.openstack.swift.exception.GenericException;
 import ch.iterate.openstack.swift.model.ContainerInfo;
 import ch.iterate.openstack.swift.model.ObjectMetadata;
@@ -55,7 +56,7 @@ public class SwiftAttributesFinderFeature implements AttributesFinder, Attribute
     private final SwiftSession session;
     private final PathContainerService containerService = new DefaultPathContainerService();
     private final RFC1123DateFormatter rfc1123DateFormatter = new RFC1123DateFormatter();
-    private final ISO8601DateParser iso8601DateParser = new ISO8601DateParser();
+    private final ISO8601DateFormatter iso8601DateFormatter = new ISO8601DateFormatter();
     private final SwiftRegionService regionService;
 
     public SwiftAttributesFinderFeature(SwiftSession session) {
@@ -96,7 +97,11 @@ public class SwiftAttributesFinderFeature implements AttributesFinder, Attribute
                 if(file.isDirectory()) {
                     // Directory placeholder file may be missing. Still return empty attributes when we find children
                     try {
-                        new SwiftObjectListService(session).list(file, listener, containerService.getKey(file));
+                        new SwiftObjectListService(session).list(file, new CancellingListProgressListener());
+                    }
+                    catch(ListCanceledException l) {
+                        // Found common prefix
+                        return PathAttributes.EMPTY;
                     }
                     catch(NotfoundException n) {
                         throw e;
@@ -105,20 +110,22 @@ public class SwiftAttributesFinderFeature implements AttributesFinder, Attribute
                     return PathAttributes.EMPTY;
                 }
                 // Try to find pending large file upload
-                final Write.Append append = new SwiftWriteFeature(session, regionService).append(file, new TransferStatus());
+                final Write.Append append = new SwiftLargeObjectUploadFeature(session, regionService, new SwiftWriteFeature(session, regionService)).append(file, new TransferStatus());
                 if(append.append) {
-                    return new PathAttributes().withSize(append.size);
+                    return new PathAttributes().withSize(append.offset);
                 }
                 throw e;
             }
             if(file.isDirectory()) {
-                if(!StringUtils.equals("application/directory", metadata.getMimeType())) {
-                    throw new NotfoundException(String.format("Path %s is file", file.getAbsolute()));
+                if(!StringUtils.equals(SwiftDirectoryFeature.DIRECTORY_MIME_TYPE, metadata.getMimeType())) {
+                    throw new NotfoundException(String.format("File %s has set MIME type %s but expected %s",
+                            file.getAbsolute(), metadata.getMimeType(), SwiftDirectoryFeature.DIRECTORY_MIME_TYPE));
                 }
             }
             if(file.isFile()) {
-                if(StringUtils.equals("application/directory", metadata.getMimeType())) {
-                    throw new NotfoundException(String.format("Path %s is directory", file.getAbsolute()));
+                if(StringUtils.equals(SwiftDirectoryFeature.DIRECTORY_MIME_TYPE, metadata.getMimeType())) {
+                    throw new NotfoundException(String.format("File %s has set MIME type %s",
+                            file.getAbsolute(), metadata.getMimeType()));
                 }
             }
             return this.toAttributes(metadata);
@@ -143,15 +150,15 @@ public class SwiftAttributesFinderFeature implements AttributesFinder, Attribute
         final String lastModified = object.getLastModified();
         if(lastModified != null) {
             try {
-                attributes.setModificationDate(iso8601DateParser.parse(lastModified).getTime());
+                attributes.setModificationDate(iso8601DateFormatter.parse(lastModified).getTime());
             }
             catch(InvalidDateException e) {
-                log.warn(String.format("%s is not ISO 8601 format %s", lastModified, e.getMessage()));
+                log.warn("{} is not ISO 8601 format {}", lastModified, e.getMessage());
                 try {
                     attributes.setModificationDate(rfc1123DateFormatter.parse(lastModified).getTime());
                 }
                 catch(InvalidDateException f) {
-                    log.warn(String.format("%s is not RFC 1123 format %s", lastModified, f.getMessage()));
+                    log.warn("{} is not RFC 1123 format {}", lastModified, f.getMessage());
                 }
             }
         }
@@ -163,22 +170,16 @@ public class SwiftAttributesFinderFeature implements AttributesFinder, Attribute
         attributes.setSize(Long.parseLong(metadata.getContentLength()));
         final String lastModified = metadata.getLastModified();
         try {
-            attributes.setModificationDate(new Double(Double.parseDouble(lastModified) * 1000).longValue());
+            attributes.setModificationDate(Double.valueOf(Double.parseDouble(lastModified) * 1000).longValue());
         }
         catch(NumberFormatException e) {
-            log.warn(String.format("%s is not in UNIX Epoch time stamp format %s", lastModified, e.getMessage()));
+            log.warn("{} is not in UNIX Epoch time stamp format {}", lastModified, e.getMessage());
         }
         if(StringUtils.isNotBlank(metadata.getETag())) {
             final String etag = RegExUtils.removePattern(metadata.getETag(), "\"");
-            attributes.setETag(etag);
-            if(metadata.getMetaData().containsKey(Constants.X_STATIC_LARGE_OBJECT)) {
-                // For manifest files, the ETag in the response for a GET or HEAD on the manifest file is the MD5 sum of
-                // the concatenated string of ETags for each of the segments in the manifest.
-                attributes.setChecksum(Checksum.NONE);
-            }
-            else {
-                attributes.setChecksum(Checksum.parse(etag));
-            }
+            // For manifest files, the ETag in the response for a GET or HEAD on the manifest file is the MD5 sum of
+            // the concatenated string of ETags for each of the segments in the manifest.
+            attributes.setChecksum(Checksum.parse(etag));
         }
         attributes.setMetadata(metadata.getMetaData());
         return attributes;
